--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
       rel="stylesheet"
       type="text/css"
     />
+    <link
+      href="http://fonts.googleapis.com/css?family=Wire+One&v1"
+      rel="stylesheet"
+      type="text/css"
+    />
   </head>
   <body>
     <div class="container">
